atualização do arquivo, consulta de criteria sendo usada sem o metaModel devido a erros de geração